--- a/public/public/styles.css
+++ b/public/public/styles.css
@@ -157,3 +157,15 @@ main{max-width:1040px;margin:0 auto;padding:16px}
     margin-left: auto;
   }
 }
+
+/* Desktop: make the logo 56x56 */
+@media (min-width: 641px){
+  .brand img,
+  .header .bar .logo img,
+  .header .bar .site-brand img,
+  .header .bar a.brand img,
+  .header .bar > a:first-child > img{
+    width: 56px;
+    height: 56px;
+  }
+}
